--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "enzyme-adapter-react-16": "^1.11.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-test-renderer": "^16.8.6"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/diana-tofan/Triangle-challenge"
+    "url": "https://github.com/diana-tofan/triangleChallenge"
   },
   "author": "Diana Tofan <diana_tofan@ymail.com>",
-  "homepage": "https://diana-tofan.github.io/Triangle-challenge",
+  "homepage": "https://diana-tofan.github.io/triangleChallenge",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -33,6 +35,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "enzyme": "^3.9.0",
+    "gh-pages": "^2.0.1",
+    "mocha": "^6.0.2"
   }
 }
